--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
-    "dev": "webpack-dev-server --open --env dev"
+    "dev": "webpack-dev-server --open --env dev",
+    "prepublish": "npm run build",
+    "publish": "node ./utils/publish.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "style-loader": "^0.18.2",
